# flutter_opencv

./: .metadata  ANDROID_BUILD.md  CHANGELOG.md  FEATURES.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/models/: filter_type.dart
example/lib/pages/: color_detection_page.dart  document_scanner_page.dart  photo_enhancement_page.dart
example/lib/services/: camera_service.dart  image_processing_service.dart
example/lib/utils/: isolate_image_processor.dart  logger.dart  permission_service.dart
example/lib/widgets/: filter_selector.dart  image_viewer.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements  Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_opencv.podspec
ios/Classes/: flutter_opencv.c
lib/: flutter_opencv.dart  flutter_opencv_bindings_generated.dart
lib/src/: cv_image.dart  cv_video_capture.dart
linux/: CMakeLists.txt
macos/: flutter_opencv.podspec
macos/Classes/: flutter_opencv.cc
src/: CMakeLists.txt  flutter_opencv.cc  flutter_opencv.h
windows/: CMakeLists.txt
(+4 files in other folders)
